# data

05_sensor_sim_bridge_control/: README.md
05_sensor_sim_bridge_control/ros2_ws/src/sensor_sim_bridge_control/: package.xml  setup.cfg  setup.py
05_sensor_sim_bridge_control/ros2_ws/src/sensor_sim_bridge_control/config/: controllers.yaml
05_sensor_sim_bridge_control/ros2_ws/src/sensor_sim_bridge_control/launch/: bringup.launch.py
05_sensor_sim_bridge_control/ros2_ws/src/sensor_sim_bridge_control/resource/: sensor_sim_bridge_control
05_sensor_sim_bridge_control/ros2_ws/src/sensor_sim_bridge_control/sensor_sim_bridge_control/: __init__.py  image_trigger_arm.py
05_sensor_sim_bridge_control/ros2_ws/src/sensor_sim_bridge_control/worlds/: sorting_demo.world
10_ai_ros2_device_control_lab/data/: command_annotations_example.jsonl
10_ai_ros2_device_control_lab/ros2_ws/src/sorting_arm_control/: package.xml  setup.cfg  setup.py
10_ai_ros2_device_control_lab/ros2_ws/src/sorting_arm_control/sorting_arm_control/: control_node.py
10_ai_ros2_device_control_lab/scripts/: parse_command_annotations.py  recognize_and_send.py  send_arm_command_rosbridge.py
10_cross_end_e2e_lab/: README.md  index.html  package-lock.json  package.json
10_cross_end_e2e_lab/ros2_ws/: README.md
10_cross_end_e2e_lab/ros2_ws/src/sorting_arm_mock/: package.xml  setup.cfg  setup.py
10_cross_end_e2e_lab/ros2_ws/src/sorting_arm_mock/resource/: sorting_arm_mock
10_cross_end_e2e_lab/ros2_ws/src/sorting_arm_mock/sorting_arm_mock/: arm_mock.py
10_cross_end_e2e_lab/src/: App.vue  style.css
10_cross_end_e2e_lab/src/components/: LineChartECharts.vue  Ros2RealtimeDashboard.vue  RosbridgeCommandMinimal.vue  RosbridgeMinimalSubscribe.vue  RosbridgeWorkshop.vue  SortingArmControlPanel.vue
10_cross_end_e2e_lab/src/composables/: useRosbridgeUrl.ts
10_cross_end_e2e_lab/src/protocol/: envelope.ts
10_cross_end_e2e_lab/src/utils/: ring-buffer.ts  ros-msg-convert.ts  ros-parse.ts  ros-vm.ts  rosbridge.ts  sorting-arm-protocol.ts  sorting-arm-web-control-client.ts
11_websocket_reconnect/client/: package-lock.json  package.json
11_websocket_reconnect/client/src/: App.vue
11_websocket_reconnect/client/src/components/: ReconnectPanel.vue
11_websocket_reconnect/client/src/composables/: useReconnectingWebSocket.ts
11_websocket_reconnect/client/src/utils/: ws.ts
11_websocket_reconnect/server/: app.py  requirements.txt
learnarm_ws/install/: local_setup.sh
learnarm_ws/install/arm1/lib/arm1/: test_arm_action
learnarm_ws/install/arm1/share/arm1/: package.ps1  package.xml
learnarm_ws/install/motion_api/lib/motion_api/: pick_drop  pick_rose_drop
learnarm_ws/install/motion_api/share/motion_api/: package.bash  package.dsv  package.sh  (+1 more)
learnarm_ws/log/: latest_build
learnarm_ws/src/arm1/: package.xml  setup.cfg
learnarm_ws/src/arm1/arm1/: test_arm_hand.py
learnarm_ws/src/arm1/launch/: robot_arm_action_ros2_control_launch.py  robot_arm_launch.py  robot_arm_publisher_ros2_control_launch.py  robot_arm_ros2_control_launch.py
learnarm_ws/src/arm1/urdf/: robot.urdf  robot_arm.urdf  robot_arm_ros2_controller.urdf
learnarm_ws/src/install/: local_setup.sh
learnarm_ws/src/motion_api/: CMakeLists.txt  setup.cfg  setup.py  setup.py.backup2
learnarm_ws/src/motion_api/config/: pink_cylinder.sdf
learnarm_ws/src/motion_api/launch/: load_all_models.launch.py
learnarm_ws/src/motion_api/motion_api/: motion_planning_python_api.py  test1.py  test2.py  test3.py  test4.py
learnarm_ws/src/robot_arm_config/: .setup_assistant  CMakeLists.txt
learnarm_ws/src/robot_arm_config/config/: arm.gazebo.urdf.xacro  arm.ros2_control.xacro  arm.urdf.xacro  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
learnarm_ws/src/robot_arm_config/launch/: gazebo.launch.py  moveit_rviz.launch.py  setup_assistant.launch.py  static_virtual_joint_tfs.launch.py
learnarm_ws1/: README.md
learnarm_ws1/install/: setup.sh
learnarm_ws1/src/arm1/: package.xml  setup.py
learnarm_ws1/src/arm1/arm1/: test_arm_action.py  test_arm_publisher.py
learnarm_ws1/src/arm1/config/: arm_controllers.yaml
learnarm_ws1/src/arm1/launch/: robot_arm_action_ros2_control_launch.py  robot_arm_hand_ros2_control_launch.py  robot_arm_ros2_control_launch.py  show_urdf_launch.py
learnarm_ws1/src/arm1/urdf/: rivz.rviz
learnarm_ws1/src/install/: setup.sh
learnarm_ws1/src/log/: latest_build
learnarm_ws1/src/motion_api/: package.xml
learnarm_ws1/src/motion_api/config/: blue.urdf  green.urdf  moveit_cpp.yaml  red.urdf
learnarm_ws1/src/motion_api/launch/: motion_api.launch.py
learnarm_ws1/src/motion_api/motion_api/: pick_rose_drop.py
learnarm_ws1/src/robot_arm_config/config/: arm.gazebo.friction.urdf.xacro  arm.gazebo.ros2_control.xacro  arm.srdf  initial_positions.yaml  joint_limits.yaml  pilz_cartesian_limits.yaml
learnarm_ws1/src/robot_arm_config/launch/: demo.launch.py  full_demo.launch.py  move_group.launch.py  rsp.launch.py  spawn_controllers.launch.py  warehouse_db.launch.py
robot_arm_config/: .setup_assistant  CMakeLists.txt  package.xml
robot_arm_config/config/: arm.ros2_control.xacro  arm.srdf  arm.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
robot_arm_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
(+73 files in other folders)
