<?xml version="1.0"?>
<package format="3">
  <name>sensor_sim_bridge_control</name>
  <version>0.1.0</version>
  <description>Sensor simulation + ROS2 bridge + minimal closed-loop trigger node (teaching demo)</description>
  <maintainer email="teacher@example.com">teacher</maintainer>
  <license>Apache-2.0</license>

  <!-- buildtool_depend：构建工具依赖。该包使用 ament_python。 -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- exec_depend：运行期依赖。 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <!-- launch / launch_ros：用于 ros2 launch 启动 Gazebo 与桥接节点。 -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- ros_gz_bridge：Gazebo（Ignition Transport）与 ROS 2 之间的消息桥接。 -->
  <exec_depend>ros_gz_bridge</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
